# tostiband

./: index.html  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app_streamlit_ov_fietsen.py  main.py  utils.py
data/: karaoke_bangers.csv  ovfietsen_2022-10-24.csv
simple_streamlit_app/: app_streamlit_ov_fietsen.py
