[tool.poetry]
name = "tostibaibandnd"
version = "0.1.0"
description = ""
authors = ["Kim <kim.degroot@lynxx.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
pandas = "1.2.3"
streamlit = "1.3.1"
protobuf = "3.20.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
